demo/knative/quarkus-superheroes-serverless/rest-fights.yaml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes"
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2022-06-24 - 20:21:23 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8082"
    prometheus.io/scheme: http
    serving.knative.openshift.io/enablePassthrough: "true"
  labels:
    app: rest-fights
    app.openshift.io/runtime: quarkus
    application: fights-service
    system: quarkus-super-heroes
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/name: rest-fights
  name: rest-fights
spec:
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-06-24 - 20:21:23 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8082"
        prometheus.io/scheme: http
        app.openshift.io/connects-to: "fights-db,fights-kafka,apicurio,rest-villains,rest-heroes"
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        sidecar.istio.io/inject: "true" 
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: rest-fights
        app.openshift.io/runtime: quarkus
        application: fights-service
        system: quarkus-super-heroes
        app.kubernetes.io/part-of: fights-service
        app.kubernetes.io/version: native-java17-latest
        app.kubernetes.io/name: rest-fights
    spec:
      containerConcurrency: 0
      containers:
        - envFrom:
            - configMapRef:
                name: rest-fights-config
            - secretRef:
                name: rest-fights-config-creds
          image: quay.io/quarkus-super-heroes/rest-fights:native-java17-latest
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: null
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-fights
          ports:
            - containerPort: 8082
              name: http1
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: null
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
