demo/knative/quarkus-superheroes-serverless/rest-heroes.yml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: heroes-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2022-06-24 - 20:21:07 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8083"
    prometheus.io/scheme: http
    serving.knative.openshift.io/enablePassthrough: "true"
  labels:
    app: rest-heroes
    app.openshift.io/runtime: quarkus
    application: heroes-service
    system: quarkus-super-heroes
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/part-of: heroes-service
    networking.knative.dev/visibility: cluster-local
  name: rest-heroes
spec:
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: heroes-db
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        app.quarkus.io/build-timestamp: 2022-06-24 - 20:21:07 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8083"
        prometheus.io/scheme: http
        sidecar.istio.io/inject: "true" 
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
        autoscaling.knative.dev/min-scale: "1"
      labels:
        app: rest-heroes
        app.openshift.io/runtime: quarkus
        application: heroes-service
        system: quarkus-super-heroes
        app.kubernetes.io/name: rest-heroes
        app.kubernetes.io/version: native-java17-latest
        app.kubernetes.io/part-of: heroes-service
    spec:
      containerConcurrency: 0
      containers:
        - envFrom:
            - configMapRef:
                name: rest-heroes-config
            - secretRef:
                name: rest-heroes-config-creds
          image: quay.io/quarkus-super-heroes/rest-heroes:native-java17-latest
          #imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-heroes
          ports:
            - containerPort: 8083
              name: http1
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
