demo/knative/quarkus-superheroes-serverless/rest-villains.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: villains-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
    app.quarkus.io/build-timestamp: 2022-06-24 - 20:20:53 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8084"
    prometheus.io/scheme: http
    serving.knative.openshift.io/enablePassthrough: "true"
  labels:
    app: rest-villains
    app.openshift.io/runtime: quarkus
    application: villains-service
    system: quarkus-super-heroes
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    networking.knative.dev/visibility: cluster-local
  name: rest-villains
spec:
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2022-06-24 - 20:20:53 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8084"
        prometheus.io/scheme: http
        app.openshift.io/connects-to: villains-db
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/quarkusio/quarkus-super-heroes
        sidecar.istio.io/inject: "true" 
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: rest-villains
        app.openshift.io/runtime: quarkus
        application: villains-service
        system: quarkus-super-heroes
        app.kubernetes.io/version: native-java17-latest
        app.kubernetes.io/name: rest-villains
        app.kubernetes.io/part-of: villains-service
    spec:
      containerConcurrency: 0
      containers:
        - envFrom:
            - secretRef:
                name: rest-villains-config-creds
            - configMapRef:
                name: rest-villains-config
          image: quay.io/quarkus-super-heroes/rest-villains:native-java17-latest
          #imagePullPolicy: Always
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: null
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-villains
          ports:
            - containerPort: 8084
              name: http1
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: null
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
