demo/knative/quarkus-superheroes-serverless/ui-super-heroes.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: rest-fights
    prometheus.io/scrape: "true"
    prometheus.io/path: /
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    serving.knative.openshift.io/enablePassthrough: "true"
  labels:
    app: ui-super-heroes
    application: super-heroes
    system: quarkus-super-heroes
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/part-of: super-heroes
    app.kubernetes.io/name: ui-super-heroes
  name: ui-super-heroes
spec:
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: rest-fights
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
        sidecar.istio.io/inject: "true" 
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
      labels:
        app: ui-super-heroes
        application: super-heroes
        system: quarkus-super-heroes
        app.openshift.io/runtime: nodejs
        app.kubernetes.io/part-of: super-heroes
        app.kubernetes.io/name: ui-super-heroes
    spec:
      containers:
        - image: quay.io/quarkus-super-heroes/ui-super-heroes:latest
          env:
            - name: API_BASE_URL
              value: http://rest-fights.quarkus-superheroes-serverless.svc.cluster.local
          name: ui-super-heroes
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              name: http1
              protocol: TCP
          resources:
            limits:
              memory: 128Mi
            requests:
              memory: 32Mi
